minor fixes: Change some names, add missing @override tags, some cosmetic corrections etc.